--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <a href="https://your-link.com">
-    <img src="/assets/egg.png" alt="Click the egg" class="egg" width="200">
+            <img src="{{ site.baseurl}}/assets/egg.png" alt="Click the egg" class="egg" width="600">
   </a>
 </body>
 </html>
