--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
 
         chest.addEventListener('click', () => {
             chest.src = '{{ site.baseurl }}/assets/chest-open.png'; // Swap to open chest image
+            chest.style.width = '450px';
             chest.style.transform = 'scale(1.3)';
 
             setTimeout(() => {
