--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
             chest.style.transform = 'scale(1.3)';
 
             setTimeout(() => {
-                window.location.href = '{{ site.baseurl }}/hunt.html'; // Redirect to egg hunt page
+                window.location.href = '{{ site.baseurl }}/hunt'; // Redirect to egg hunt page
             }, 1000); // Small delay for the animation
         });
         </script>
