--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -65,7 +65,7 @@
       const row = Math.floor(i / 4);
 
       // Calculate position relative to grid center
-      const x = ((col - 1.5) * (gridWidth / 4)) + 'px';
+      const x = (((col - 1.5) * (gridWidth / 4)) - 20) + 'px';
       const y = ((row - 1) * (gridHeight / 3)) + 'px';
 
       egg.style.setProperty('--x', x);
