--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -61,7 +61,8 @@
     const gridHeight = grid.offsetHeight;
 
     eggs.forEach((egg, i) => {
-      egg.style.width = (Math.floor(gridWidth / 4) - 20) + 'px';
+      //console.log(gridWidth);
+      egg.style.width = (Math.floor(gridWidth / 8) - 20) + 'px';
       const col = i % 4;
       const row = Math.floor(i / 4);
 
