--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -97,14 +97,85 @@
 <body>
 
   <div class="grid" id="eggGrid">
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 1 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 1 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 2 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 2 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 3 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 3 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 4 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 4 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 5 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 5 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 6 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 6 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 7 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 7 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 8 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 8 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 8 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 8 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 9 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 9 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 10 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 10 }}: You are my sunshine 🌼"
+    />
+    <img
+      src="{{ '/assets/egg.png' | relative_url }}"
+      class="egg"
+      data-image="{{ '/assets/photo' | append: 11 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 11 }}: You are my sunshine 🌼"
+    />
     {% for i in (1..12) %}
     <img
       src="{{ '/assets/egg.png' | relative_url }}"
       class="egg"
-      data-image="{{ '/assets/photo' | append: i | append: '.jpg' | relative_url }}"
-      data-message="Conejita moment #{{ i }}: You are my sunshine 🌼"
+      data-image="{{ '/assets/photo' | append: 12 | append: '.jpg' | relative_url }}"
+      data-message="Conejita moment #{{ 12 }}: You are my sunshine 🌼"
     />
-    {% endfor %}
   </div>
 
   <!-- Modal -->
