--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -98,7 +98,7 @@
 
   <div class="grid" id="eggGrid">
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 1 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 1 }}: You are my sunshine 🌼"
@@ -110,19 +110,19 @@
       data-message="Conejita moment #{{ 2 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/blue_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 3 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 3 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/blue_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 4 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 4 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 5 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 5 }}: You are my sunshine 🌼"
@@ -140,7 +140,7 @@
       data-message="Conejita moment #{{ 7 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 8 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 8 }}: You are my sunshine 🌼"
@@ -152,13 +152,13 @@
       data-message="Conejita moment #{{ 9 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/blue_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 10 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 10 }}: You are my sunshine 🌼"
     />
     <img
-      src="{{ '/assets/egg.png' | relative_url }}"
+      src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 11 | append: '.jpg' | relative_url }}"
       data-message="Conejita moment #{{ 11 }}: You are my sunshine 🌼"
