--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             chest.src = '{{ site.baseurl }}/assets/chest-open.png'; // Swap to open chest image
 
             chest.style.width = '450px';
-            chest.style.transform = 'scale(1.5)';
+            //chest.style.transform = 'scale(1.5)';
 
             setTimeout(() => {
                 window.location.href = '{{ site.baseurl }}/hunt'; // Redirect to egg hunt page
