--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
         const chest = document.getElementById('chest');
 
         chest.addEventListener('click', () => {
-            chest.style.transform = 'scale(1.5)';
             chest.src = '{{ site.baseurl }}/assets/chest-open.png'; // Swap to open chest image
 
             chest.style.width = '450px';
+            //chest.style.transform = 'scale(1.5)';
 
             setTimeout(() => {
                 window.location.href = '{{ site.baseurl }}/hunt'; // Redirect to egg hunt page
