--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -100,6 +100,7 @@
     <img
       src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
+      max-width="450px"
       data-image="{{ '/assets/photo' | append: 1 | append: '.jpeg' | relative_url }}"
       data-message="Conejita moment #{{ 1 }}: You are my sunshine 🌼"
     />
