--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -220,12 +220,16 @@
     // Close modal
     closeModal.addEventListener('click', () => {
       modal.style.display = 'none';
+      modalImage.src = 'none';
+      modalText.textContent = 'none';
     });
 
     // Click outside modal to close
     window.addEventListener('click', (e) => {
       if (e.target === modal) {
         modal.style.display = 'none';
+        modalImage.src = 'none';
+        modalText.textContent = 'none';
       }
     });
   </script>
