--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -70,7 +70,8 @@
     }
 
     .modal-content img {
-      max-width: 100%;
+      max-width: 350px";
+      width: 100%;
       border-radius: 12px;
       margin-bottom: 15px;
     }
@@ -100,8 +101,6 @@
     <img
       src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
-      max-width="450px"
-      max-height="450px"
       data-image="{{ '/assets/photo' | append: 1 | append: '.jpeg' | relative_url }}"
       data-message="Conejita moment #{{ 1 }}: You are my sunshine 🌼"
     />
