--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -70,7 +70,7 @@
     }
 
     .modal-content img {
-      max-width: 350px";
+      max-width: 350px;
       width: 100%;
       border-radius: 12px;
       margin-bottom: 15px;
