--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -102,13 +102,13 @@
       src="{{ '/assets/pink_egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 1 | append: '.jpeg' | relative_url }}"
-      data-message="Conejita moment #{{ 1 }}: You are my sunshine 🌼"
+      data-message="12 April 2024: It's been almost a year since we took this one and I still don't know if you are the one on the right, or on the left, UNBELIVABLE"
     />
     <img
       src="{{ '/assets/egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 2 | append: '.jpeg' | relative_url }}"
-      data-message="Conejita moment #{{ 2 }}: You are my sunshine 🌼"
+      data-message="6 May 2024: "
     />
     <img
       src="{{ '/assets/blue_egg.png' | relative_url }}"
