--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -62,7 +62,7 @@
       background-color: white;
       padding: 20px;
       border-radius: 20px;
-      max-width: 90%;
+      max-width: 30%;
       max-height: 90%;
       text-align: center;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
@@ -109,7 +109,8 @@
       src="{{ '/assets/egg.png' | relative_url }}"
       class="egg"
       data-image="{{ '/assets/photo' | append: 2 | append: '.jpeg' | relative_url }}"
-      data-message="6 May 2024: "
+      data-message="6 May 2024: I really hope you remember you still owe me the last 3 Starwars movies ;)
+                (We will need at least two liters of Soju tho, ONLY WAY TO MAKE THEM BAREBLE IM AFRIAD)"
     />
     <img
       src="{{ '/assets/blue_egg.png' | relative_url }}"
