--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -118,55 +118,66 @@
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 3 | append: '.jpeg' | relative_url }}"
                 data-message="15 June 2024: CANNOT let you forget the best day of the year actually,
-                "
+                    cannot wait to see you the next time at the beach, hoping its Colombia?"
             />
             <img
                 src="{{ '/assets/blue_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 4 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 4 }}: You are my sunshine 🌼"
+                data-message="6 July 2024: I really, really think you should wear this to parties
+                             more often? It screams girlypop in my opinion"
             />
             <img
                 src="{{ '/assets/pink_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 5 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 5 }}: You are my sunshine 🌼"
+                data-message="8 August 2024: Thought it would be beyond inappropriate to put my
+                            birthday and not yours? what kind of guy does that? Appreciating all the
+                            times you held my stuff while I destroyed my face in those rollercoasters :)"
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 6 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 6 }}: You are my sunshine 🌼"
+                data-message="29 September 2024: Remembering now how we saw half of France from here jejeee,
+                            with the very traditional French food we also ate that day?? 
+                            (BEST BURGER AND FRIES EVER)"
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 7 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 7 }}: You are my sunshine 🌼"
+                data-message="12 October 2024: I think we both agree, that the ride with the little caterpillar spinning around
+                was the wildest adventure we have ever been embarked on, couldn't have done that without you"
             />
             <img
                 src="{{ '/assets/pink_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 8 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 8 }}: You are my sunshine 🌼"
+                data-message="22 November 2024: This memory is so sweet and sour, sweet because I am pretty sure we finished that cake
+                the SAME DAY, and sour because I never learned how to make it :((( JUST KNOW THAT IF YOU DONT RELEASE THE RECIPIE 
+                I MAY HAVE TO TAKE DRASTIC ACTIONS (cry in a very dark corner)"
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 9 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 9 }}: You are my sunshine 🌼"
+                data-message="19 December 2024: So hard not to love this photo when everything in it says 'Camcam', they reddish/pinkish nails,
+                the pink sweater, the UNTOUCHED glass of wine and the most LOVING face for food I have ever seen in my entire life"
             />
             <img
                 src="{{ '/assets/blue_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 10 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 10 }}: You are my sunshine 🌼"
+                data-message="12 January 2025: I am so so so concered about giving you so many animal personalities, a mouse, a frog,
+                a rabbit, a dolphin, AND IN JANUARY I MADE YOU A CAT???? No wonder you lost your mind, I take 100% of the accountability"
             />
             <img
                 src="{{ '/assets/pink_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 11 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 11 }}: You are my sunshine 🌼"
+                data-message="14 February 2025: I really love that one of the last pictures we took before you left is one where we
+                are thinking about each other one year into the future, and I really hope "
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
