--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -177,13 +177,13 @@
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 11 | append: '.jpeg' | relative_url }}"
                 data-message="14 February 2025: I really love that one of the last pictures we took before you left is one where we
-                are thinking about each other one year into the future, and I really hope "
+                are thinking about each other one year into the future, I hope we stay that way."
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 12 | append: '.jpeg' | relative_url }}"
-                data-message="Conejita moment #{{ 12 }}: You are my sunshine 🌼"
+                data-message="3 March 2025: And of course, Venezia "
             />
         </div>
 
