--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -177,13 +177,14 @@
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 11 | append: '.jpeg' | relative_url }}"
                 data-message="14 February 2025: I really love that one of the last pictures we took before you left is one where we
-                are thinking about each other one year into the future, I hope we stay that way."
+                are thinking about each other one year into the future, and I hope we stay that way."
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 12 | append: '.jpeg' | relative_url }}"
-                data-message="3 March 2025: And of course, Venezia "
+                data-message="3 March 2025: And of course, Venezia. I don't know if you think about it as much as I do, but know
+                that I take this day forever with me, no other way I want to remember Italy by"
             />
         </div>
 
